# boids-hs

./: CHANGELOG.md  LICENSE  README.md  boids-hs.cabal  build.sh  main.hs
app/: Main.hs
