cabal-version:      3.0
name:               boids-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Vladimir Ovechkin
maintainer:         vladov3000@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable boids-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, gloss ^>=1.13.2.1, random ^>=1.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
